# lib-itu-sm2117

./: .gitignore  LICENSE  README.md  README_tips.md  setup.cfg  setup.py
docs/: howtos.md
src/itusm2117/: __init__.py  _internal.py  _schema.py  read.py  write.py
tests/: ituh5_test.py
