[metadata]
name = itusm2117
version = 0.0.1
author = André Teixeira dos Santos
author_email = andre.santos@keybridgeglobal.com
description = ITU-R SM.2117-0 Python Library
long_description = file: README.md
long_description_content_type = text/markdown
url = http://git.mcl.keybridge.ch/ml/lib-itu-sm2117
project_urls =
    Bug Tracker = http://git.mcl.keybridge.ch/ml/lib-itu-sm2117/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src